--- a/apps/blog_web/assets/css/components/post.css
+++ b/apps/blog_web/assets/css/components/post.css
@@ -9,18 +9,6 @@
     gap: var(--space-2);
     flex-wrap: wrap;
     margin-block-end: var(--space-line);
-
-    & h1 {
-      background-color: var(--ansi-blue);
-      color: var(--ansi-yellow);
-      padding-inline: var(--space-1);
-      font-weight: var(--font-weight-bold);
-      margin: 0;
-
-      &::before {
-        content: '';
-      }
-    }
   }
 
   .post-published,
